# donut

./: .gitignore  CMakeLists.txt  build.py
Quantum/: CMakeLists.txt  README.md
Quantum/hdQuantum/: CMakeLists.txt
Quantum/hdQuantum/resources/: plugInfo.json
Quantum/hdQuantum/shaders/: CMakeLists.txt  test_vs.hlsl
Quantum/hdQuantum/src/: CMakeLists.txt  HdQuantumMesh.cpp  HdQuantumMesh.h  HdQuantumRenderDelegate.cpp  HdQuantumRenderDelegate.h  HdQuantumRenderPass.cpp  HdQuantumRenderPass.h  HdQuantumRendererPlugin.cpp  HdQuantumRendererPlugin.h  dllmain.cpp  pch.h  rendererPlugin.cpp  rendererPlugin.h
