

set(UST_INSTALL_ROOT "H:/L1/quantum/AuroraUSD")
set(USD_ROOT "H:/L1/quantum/Aurora/AuroraExternals")


set(pxr_DIR "${USD_ROOT}/USD/include")
set(boost_DIR "${USD_ROOT}/boost/include/boost-1_78")
set(tbb_DIR "${USD_ROOT}/tbb/include")
set(OpenSubdiv_DIR "${USD_ROOT}/OpenSubdiv/include")

set(USD_LIB_DIR "H:/L1/quantum/AuroraUSD/lib")

set(QuantumFolder "Quantum")

#set(DEFAULT_COMPILE_DEFINITIONS NOMINMAX UNICODE _USE_MATH_DEFINES _HAS_STD_BYTE=0)


add_subdirectory(hdQuantum)
